After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754047 - glupload: Loses overlay meta when using raw uploader
glupload: Loses overlay meta when using raw uploader
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal blocker
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-24 22:44 UTC by Nicolas Dufresne (ndufresne)
Modified: 2015-08-28 18:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glcolorconvert: Use base transform metadata copy (1.49 KB, patch)
2015-08-24 23:49 UTC, Nicolas Dufresne (ndufresne)
accepted-commit_now Details | Review
glupload: Use base class metadata copy function (3.53 KB, patch)
2015-08-24 23:49 UTC, Nicolas Dufresne (ndufresne)
accepted-commit_now Details | Review

Description Nicolas Dufresne (ndufresne) 2015-08-24 22:44:10 UTC
When the raw uploaded is picked, the composition meta isn't copied over, which lead to the loss of overlay. This is a regression in 1.5.

gst-launch-1.0 v4l2src io-mode=mmap ! textoverlay text=YEAH font-desc="Arial 60" ! glimagesink

The reason seemed that we override prepare_buffer(), which default implementation is responsible for copying metas.
Comment 1 Nicolas Dufresne (ndufresne) 2015-08-24 23:49:49 UTC
Created attachment 309935 [details] [review]
glcolorconvert: Use base transform metadata copy

Use base class default method instead of only copying flags and
timestamp. This way, selected meta's like compostion overlay will
be passed downstream as expected.
Comment 2 Nicolas Dufresne (ndufresne) 2015-08-24 23:49:52 UTC
Created attachment 309936 [details] [review]
glupload: Use base class metadata copy function

This allow properly copying selected meta, like the composition
overlay. Note that output buffer need to be readable, but GlUpload
keeps a ref. For now, simply drop GlUpload ref after perform,
leaving that ref has no purpose. The method shall be removed
in the future.
Comment 3 Sebastian Dröge (slomo) 2015-08-25 06:33:39 UTC
Comment on attachment 309936 [details] [review]
glupload: Use base class metadata copy function

Do we also have this release problem with gldownload/glcolorconvert? If so, let's fix it in one go.
Comment 4 Nicolas Dufresne (ndufresne) 2015-08-25 17:20:07 UTC
(In reply to Sebastian Dröge (slomo) from comment #3)
> Comment on attachment 309936 [details] [review] [review]
> glupload: Use base class metadata copy function
> 
> Do we also have this release problem with gldownload/glcolorconvert? If so,
> let's fix it in one go.

Only glupload have such a release method. This though, isn't the only inconsistency in the API.

gst_gl_download_set_format() vs gst_gl_upload_set_caps(). Then the set of extra helpers seems to vary, though nothing major for the rest.

I think we should not revisit the API now, but wait for 1.7 (and try and work out something we think can be made stable, stripping off anything not essential).
Comment 5 Nicolas Dufresne (ndufresne) 2015-08-25 17:21:39 UTC
Attachment 309935 [details] pushed as b06fc67 - glcolorconvert: Use base transform metadata copy
Attachment 309936 [details] pushed as ae6f4a2 - glupload: Use base class metadata copy function
Comment 6 Sebastian Dröge (slomo) 2015-08-25 19:20:43 UTC
(In reply to Nicolas Dufresne (stormer) from comment #4)
> (In reply to Sebastian Dröge (slomo) from comment #3)
> > Comment on attachment 309936 [details] [review] [review] [review]
> > glupload: Use base class metadata copy function
> > 
> > Do we also have this release problem with gldownload/glcolorconvert? If so,
> > let's fix it in one go.
> 
> Only glupload have such a release method. This though, isn't the only
> inconsistency in the API.
> 
> gst_gl_download_set_format() vs gst_gl_upload_set_caps(). Then the set of
> extra helpers seems to vary, though nothing major for the rest.
> 
> I think we should not revisit the API now, but wait for 1.7 (and try and
> work out something we think can be made stable, stripping off anything not
> essential).

Agreed, can you create a reminder bug about that? :)
Comment 7 Nicolas Dufresne (ndufresne) 2015-08-25 19:45:51 UTC
For the reference, https://bugzilla.gnome.org/show_bug.cgi?id=754094